made SUM function and base functions for others

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="header">Web table</div>
     <div id="container">
     </div>
-<script src="scritps.js"></script>
+<script type="module" src="scripts.js"></script>
+<script type="module" src="parsing.js"></script>
 </body>
 </html>
