--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     </div>
 <script type="module" src="scripts.js"></script>
 <script type="module" src="parsing.js"></script>
+<script type="module" src="formulas_logic.js"></script>
 </body>
 </html>
