--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <div id="header">Web table</div>
-    <div id="container">
-    </div>
+    <div id="container"></div>
 <script type="module" src="scripts.js"></script>
 <script type="module" src="parsing.js"></script>
 <script type="module" src="formulas_logic.js"></script>
